# bundle

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
backend/db/: Cargo.toml
backend/db/migrations/2023-10-02-091223_songs_and_artists/: down.sql  up.sql
backend/db/src/: lib.rs  schema.rs
bot/: Cargo.toml
bot/src/: main.rs
doc/: game-music-quiz.excalidraw
games/number-guessing-game/: Cargo.toml
games/number-guessing-game/src/: lib.rs
l10n/: music-quiz-module.yaml  ping-module.toml  ping-module.yaml
modules/music-quiz-module/: Cargo.toml
modules/music-quiz-module/src/: game.rs  lib.rs  lobby.rs
modules/number-guessing-game-module/: Cargo.toml
modules/ping-module/: Cargo.toml
modules/ping-module/src/: lib.rs
