[workspace]
members = ["bot", "modules/*"]
resolver = "2"
default-members = ["bot"]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
dotenvy = "0.15.7"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tranquil = { git = "https://github.com/Possseidon/tranquil", rev = "b592fc11adedc4600703a504853aff78f8b97f26" }
