[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ping-module = { path = "../modules/ping-module" }
dotenv = "0.15.0"
serenity = "0.11.5"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "signal"] }
tranquil = "0.1.0"
