[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
tranquil = { workspace = true }

music-quiz-module = { path = "../modules/music-quiz-module" }
ping-module = { path = "../modules/ping-module" }
